deployment/k8s/services/api-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    service: scrapper-api
  ports:
    - port: 4001
      targetPort: 4001
