deployment/k8s/services/client-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    service: scrapper-client
  ports:
    - port: 3000
      targetPort: 3000
