deployment/k8s/services/db-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    service: scrapper-db
  ports:
    - port: 27017
      targetPort: 27017
