deployment/k8s/services/message-broker-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: message-broker-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    service: scrapper-message-broker
  ports:
    - port: 5672
      name: amqp
      targetPort: 5672
    - port: 15672
      name: management
      targetPort: 15672
