deployment/k8s/services/scrapper-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: scrapper-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    service: scrapper-service
  ports:
    - port: 4000
      targetPort: 4000
