deployment/k8s/services/scrapper-worker-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: scrapper-worker-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    service: scrapper-worker
  ports:
    - port: 4002
      targetPort: 4002
