deployment/k8s/services/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
          - path: /scrapper
            pathType: Prefix
            backend:
              service:
                name: scrapper-cluster-ip-service
                port:
                  number: 4000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-cluster-ip-service
                port:
                  number: 4001
